# DevOpsZealot

./: .env.example  .gitignore  .replit  Dockerfile  PLAN.md  PROJECT_SUMMARY.md  README-new.md  README.md  README_CONTINUE.md  ai_agent.py  app.py  build_container.sh  config_storage.py  container_manager.py  container_requirements.txt  demo_redmine.py  demo_test.py  git_operations.py  pyproject.toml  quickstart.sh  redmine_integration.py  requirements.txt  setup.py  test_setup.py  utils.py
.continue/: config.json
.continue/scripts/: validate_terraform.js  zealot_task.js
.github/workflows/: integration-test-pipeline.yml  remote-repo-test.yml  test-universal-architecture.yml
container_worker/: ai_worker.py  git_worker.py  redmine_worker.py  run_job.py
demos/: whisper_transcribe.sh
demos/ai-integration/: .env.example  Dockerfile.zealot.test  ai_file_editor.py  context-meeting-transcription-error-handling.json  context.json  (+23 more)
docker/: Dockerfile.base  Dockerfile.zealot  Dockerfile.zealot.test  docker-compose.yml
docs/: INTEGRATION_REPORT.md  MIGRATION_GUIDE.md  ZEALOT_CYCLES.md  ZEALOT_CYCLES_REPORT.md  continue-integration-report.md  environment_variables.md  github_integration.md  repository_standards.md
examples/: add-s3-bucket.md  demo_hybrid.py
mcp/: package.json  zealot-mcp-server.js
tests/: conftest.py  manual_test_universal.py  test_ci_simple.py  test_engine.py  test_local_dev.py  test_universal_advanced.py  test_universal_architecture.py  test_universal_basic.py  test_universal_engine.py  test_zealot_cycles.py  verify_universal_architecture.py
(+55 files in other folders)
