[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.44",
    "openai>=1.88.0",
    "pathlib>=1.0.1",
    "python-redmine>=2.5.0",
    "requests>=2.32.4",
    "streamlit>=1.46.0",
    "trafilatura>=2.0.0",
]
